[package]
name = "egraph-serialize-neo4j"
version = "0.1.0"
edition = "2024"

[dependencies]
egraph-serialize = "0.2.0"
neo4rs = "0.8.0"
tokio = "1.46.1"
futures = "0.3.31"
clap = { version = "4.5.41", features = ["derive"] }
serde_json = "1.0.141"
env_logger = "0.11.8"
logging = "0.1.0"
log = "0.4.27"
rand = "0.9.2"
